--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -7,41 +7,64 @@
 		<div class="box-element">
 			<a class="btn btn-outline-dark" href="{% url 'index' %}">&#x21E6; Continue Shopping</a>
 			<br>
-			<br>
-			<table class="table">
-				<tr>
-					<th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
-					<th><h5>Total:<strong> ${{order.get_cart_total|floatformat:2}}</strong></h5></th>
-					<th>
-						<a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout &#x21E8;</a>
-					</th>
-				</tr>
-			</table>
+			<hr>
+			<div class="row">
+				<div class="col-5">
+					<div class="row">
+						<div class="col-lg-6">
+							<h5>Items: <strong>{{order.get_cart_items}}</strong></h5>
+						</div>
+						<div class="col-lg-6">
+							<h5>Total:<strong> ${{order.get_cart_total|floatformat:2}}</strong></h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-7">
+					<a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout &#x21E8;</a>
+				</div>
+			</div>
 		</div>
 		<br>
 		<div class="box-element">
-			<div class="cart-row">
-				<div style="flex:2"></div>
-				<div style="flex:2"><strong>Item</strong></div>
-				<div style="flex:1"><strong>Price</strong></div>
-				<div style="flex:1"><strong>Quantity</strong></div>
-				<div style="flex:1"><strong>Total</strong></div>
-			</div>
 			{% for item in items %}
 			<div class="cart-row">
-				<div style="flex:2"><img class="row-image" src="{{ item.product.imageURL }}"></div>
-				<div style="flex:2"><p>{{ item.product.name }}</p></div>
-				<div style="flex:1"><p>${{ item.product.price|floatformat:2 }}</p></div>
-				<div style="flex:1">
-					<p class="quantity">{{ item.quantity }}</p>
-					<div class="quantity">
-					<a href="/plusItem?productId={{ item.product.id }}"><img class="chg-quantity" src="{% static  'images/arrow-up.png' %}"></a>
-					<a href="/minusItem?productId={{ item.product.id }}"><img class="chg-quantity" src="{% static  'images/arrow-down.png' %}"></a>
-					</div>
+				<div class="col-5">
+					<div class="row">
+						<div class="col-lg-4">
+							<img class="row-image" src="{{ item.product.imageURL }}">
+						</div>
+						<div class="col-lg-4">
+							<p>{{ item.product.name }}</p>
+						</div>
+						<div class="col-lg-4">
+							<p>${{ item.product.price|floatformat:2 }}</p>
+						</div>
+					</div>	
 				</div>
-				<div style="flex:1"><p>${{ item.get_total }}</p></div>
+				<div class="col-2">
+					<!-- <div class="row"> -->
+						<!-- <p class="col-6 quantity">{{ item.quantity }}</p> -->
+						<div class="quantity">
+							<!-- <a href="/plusItem?productId={{ item.product.id }}"><img class="chg-quantity" src="{% static  'images/arrow-up.png' %}"></a> -->
+							<a href="/plusItem?productId={{ item.product.id }}"><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-caret-up-fill chg-quantity" xmlns="http://www.w3.org/2000/svg">
+								<path d="M7.247 4.86l-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
+							</svg></a>
+
+							<div><b>{{ item.quantity }}</b></div>
+
+							<a href="/minusItem?productId={{ item.product.id }}"><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-caret-down-fill chg-quantity"  xmlns="http://www.w3.org/2000/svg">
+								<path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+							</svg></a>
+							<!-- <a href="/minusItem?productId={{ item.product.id }}"><img class="chg-quantity" src="{% static  'images/arrow-down.png' %}"></a> -->
+						</div>
+					<!-- </div> -->
+				</div>
+				<div class="col-5">
+					<div><p>${{ item.get_total }}</p></div>
+				</div>
 			</div>
-		{% endfor %}
+			{% endfor %}
+		</div>
 	</div>
 </div>
 
